# approval-service

./: .dockerignore  .gitattributes  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
api/v1/routes/: health.py  workspaces.py
core/: auth.py  config.py  database.py
dto/: approval_request_dto.py  auth_context_dto.py  decision_dto.py
enums/: approval_event_type_enum.py  approval_status_enum.py  auth_action_enum.py  outbox_event_enum.py  source_type_enum.py
exceptions/: auth_exc.py  request_exc.py
migrations/: env.py
migrations/versions/: 9c471dfa40ef_initial_schema.py
models/: approval_event.py  approval_request.py  approval_reviewer.py  idempotency_key.py  outbox_event.py
repositories/: approval_event_repository.py  approval_request_repository.py  approval_reviewer_repository.py  base_repository.py  idempotency_repository.py  outbox_event_repository.py
schemas/: approval_event_schemas.py  approval_request_schemas.py  approval_reviewer_schemas.py
services/: request_decision_service.py  request_service.py
tests/: conftest.py  test_approval_requests.py  test_auth.py  test_decisions.py  test_health.py  test_idempotency_race.py  utils.py
